src/styles/partials/_consultings.scss
@mixin shared-input-style {
    padding: 0.75rem 25px;
    width: 100%;
    height: 52px;
    border-radius: 8px;
    outline: none;
    border: 1px solid #8d8ba7;
    font-family: $font-dm, sans-serif;
    font-size: 18px;
    font-weight: 400;
    line-height: 18px;
    color: black;
    background: #f9f9ff;

    &:focus {
        border-color: #2f3983;
    }

    &::placeholder {
        color: #8d8ba7;
        opacity: 1; /* Firefox */
    }

    &::-ms-input-placeholder {
        color: #8d8ba7; /* Edge 12-18 */
    }
}

.contact-form-container {
    background-color: $white;
    border-radius: 20px;
    padding: 80px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15);
    font-family: "Open Sans", sans-serif;

    h2 {
        color: $blue;
        text-align: center;
        font-size: 42px;
        font-weight: 700;
        line-height: 50px;
        font-feature-settings: "liga" off, "clig" off;
    }

    p {
        text-align: center;
        color: #9795b5;
        line-height: 30px;
        margin-top: 10px;
    }

    form {
        display: flex;
        flex-direction: column;
        align-items: center;
        margin-top: 50px;
        padding: 0 287px;
    }

    .form-row {
        display: flex;
        gap: 22px;
        margin-bottom: 1rem;
        width: 100%;

        .input-group {
            flex: 1;
            display: flex;
            flex-direction: column;

            input {
                @include shared-input-style;
            }

            .error-message {
                margin-top: 0.5rem;
                color: #d14040;
                font-size: 0.875rem;
            }

            &--wide {
                textarea {
                    @include shared-input-style;
                    width: 100%;
                    height: 102px;
                }
            }
        }
    }

    .form-checkbox {
        margin: 20px 0 1.5rem;
        display: flex;
        align-items: center;

        .container {
            display: flex;
            align-items: center;
            position: relative;
            padding-left: 35px;
            cursor: pointer;
            font-size: 1rem;
            font-weight: 400;
            color: #8d8ba7;

            input {
                position: absolute;
                opacity: 0;
                cursor: pointer;
                height: 0;
                width: 0;
            }

            .checkmark {
                position: absolute;
                top: 0;
                left: 0;
                height: 20px;
                width: 20px;
                background-color: #eee;
                border-radius: 5px;
                border: 1px solid #8d8ba7;

                &:hover {
                    background-color: #ccc;
                }

                &:after {
                    content: "";
                    position: absolute;
                    display: none;
                    left: 5px;
                    top: 1px;
                    width: 5px;
                    height: 10px;
                    border: solid white;
                    border-width: 0 3px 3px 0;
                    transform: rotate(45deg);
                }
            }

            input:checked ~ .checkmark {
                background-color: $blue;

                &:after {
                    display: block;
                }
            }
        }
    }

    .button-form {
        font-size: 20px;
        font-weight: 700;
        line-height: normal;
        max-width: 234px;
    }
}

